--- a/css/product-carousel.css
+++ b/css/product-carousel.css
@@ -1,4 +1,4 @@
-.product-carousel {
+.product-carousel__inner {
     display: grid;
     grid-template-columns: 100px 1fr 100px;
     min-height: 300px;
@@ -10,3 +10,16 @@
     justify-content: center;
     gap: 20px;
 }
+
+.product-carousel__indicators {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+
+    .active {
+        background-color: red;
+    }
+}
+
+
